fix: ensure pathway button is still right aligned

--- a/sass/_author.scss
+++ b/sass/_author.scss
@@ -1,5 +1,7 @@
 @use 'base';
 
+$button-width: 9rem;
+
 main.author {
   max-width: base.px-to-rem(900px);
 }
@@ -14,7 +16,7 @@ main.author {
   row-gap: 0.5rem;
 
   @media screen and (min-width: base.px-to-rem(base.$breakpoint)) {
-    grid-template-columns: minmax(0, 1fr) base.px-to-rem(160px);
+    grid-template-columns: minmax(0, 1fr) $button-width;
     grid-column-gap: 1rem;
     column-gap: 1rem;
   }
@@ -33,6 +35,8 @@ main.author {
   @include base.f4;
   cursor: pointer;
   line-height: 1;
+  width: 100%;
+  max-width: $button-width;
 }
 
 .pathway__button--show {
